# ws-cli-tools

./: .travis.yml  AUTHORS  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: continuous-integration.yml
iotlabwscli/: __init__.py  client.py  parser.py  websocket.py
iotlabwscli/tests/: iotlabwscli_mock.py  parser_test.py  websocket_test.py
tests_utils/: COPYING_HEADER  check_license.sh  test-requirements.txt
