[tool:pytest]
addopts =
    -vs
    --doctest-modules
    --cov iotlabwscli
    --cov-report term-missing
    --cov-branch
testpaths = iotlabwscli

[lint]
lint-reports = no
lint-disable = locally-disabled,star-args,bad-option-value,old-style-class
lint-msg-template = {path}:{line}: [{msg_id}({symbol}), {obj}] {msg}

[pep8]
exclude = *.egg,.tox

[flake8]
ignore = C901
exclude = .tox,dist,doc,build,*.egg
max-complexity = 6

[metadata]
description-file = README.rst
