[tool:pytest]
addopts =
    -vs
    --doctest-modules
    --cov iotlabwscli
    --cov-report term
    --cov-report term-missing
    --cov-report xml
    --cov-branch
testpaths = iotlabwscli

[pylint]
reports=no
disable=locally-disabled,star-args,bad-option-value,old-style-class,unspecified-encoding
msg-template={path}:{line}: [{msg_id}({symbol}), {obj}] {msg}

[pycodestyle]
exclude = *.egg,.tox

[flake8]
ignore = C901
exclude = .tox,dist,doc,build,*.egg
max-complexity = 6

[metadata]
description-file = README.rst
